--- a/public/assests/css/sellerHeader.styles.css
+++ b/public/assests/css/sellerHeader.styles.css
@@ -1,11 +1,7 @@
-* {
+body{
+    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
-
-body{
-    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;;
 }
 
 header {
