--- a/public/assests/css/footer.styles.css
+++ b/public/assests/css/footer.styles.css
@@ -1,10 +1,6 @@
 .footer {
-    position: absolute;
-    top: 470%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 1920px;
     width: 100%;
+    margin-top: 32px;
     background: #f7f7f7;
     border-radius: 6px;
     font-weight: 600;
