--- a/public/assests/css/sellerDashboard.styles.css
+++ b/public/assests/css/sellerDashboard.styles.css
@@ -73,6 +73,7 @@ body{
     height: auto;
     border: 1px solid #c5c6c9;
     margin-top: 32px;
+    padding-bottom: 16px;
     border-radius: 10px;
 }
 .job-card{
