--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -1,39 +1,30 @@
 body{
     overflow-x: hidden;
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+    color: #404145;
 }
+/*section one*/
 .section-one {
-    margin-top: 70px;
-    margin-left: 110px;
-    padding: 10px;
+    margin-top: 32px;
+    margin-left: 32px;
+    padding: 16px 32px;
     display: flex;
     flex-direction: row; 
-    gap: 700px;
 }
-
 .section-one-left {
-    font-size: 8.2px;
-    font-weight: 400px;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
-
 .section-one svg{
-    margin-top: 11px;
-    padding-right: 10px;
+    margin-right: 8px;
 }
-
 .section-one-right {
     font-size: 8.2px;
     font-weight: 400px;
     display: flex;
     flex-direction: row;
 }
-
-.heart{
-    padding-top: 2px;
-}
-
 .section-one-right h1{
     padding-top: 3px;
     padding-left: 8px;
@@ -43,83 +34,49 @@ body{
     border-radius: 3px;
 }
 
-.share{
-    margin-left: 10px;
-    padding-top: 5px;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-bottom: 5px;
-    border: 1px solid gray;
-    border-radius: 3px;
-}
-
-.three-dots{
-    margin-left: 10px;
-    padding-top: 5px;
-    padding-left: 8px;
-    padding-right: 8px;
-    padding-bottom: 5px;
-    border: 1px solid gray;
-    border-radius: 3px;   
-}
-
+/*section two*/
 .section-two {
-    margin-left: 120px;
     display: flex;
-    flex-direction: row; 
-    gap: 250px;
+    justify-content: space-between;
+    margin: 16px 32px;
+    padding: 16px 32px;
+    background-color: #fff;
 }
-
 .section-two-left{
-    font-size: 17px;
+    width: 60%;
 }
-
 .section-two-left-one{
     display: flex;
     flex-direction: row;
+    align-items: center;
+    margin-top: 16px;
 }
-
 .section-two-right{
-    font-size: 17px;
+    width: 40%;
 }
-
 .gig-profile-image{
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
+    width: 64px;
+    height: 64px;
+    border-radius: 100%;
 }
-
-/* .section-two-left-right {
-    display: flex;
-    flex-direction: row;
-} */
-
 .section-two-left-right{
-    margin-top: -8px;
+    display: flex;
+    flex-direction: column;
 }
-
 .section-two-left-right-one {
     display: flex;
     flex-direction: row;
 }
 .section-two-left-right-h-one{
-    font-size: 16px;
-    margin-left: 20px;
+    margin-left: 16px;
 }
-
 .section-two-left-right-h-two{
-    font-size: 16px;
-    margin-left: 20px;
-    margin-left: 10px;
     color: rgb(151, 149, 149);
 }
-
 .section-two-left-right-h-three{
-    font-size: 16px;
     margin-left: 20px;
     color: rgb(151, 149, 149);
 }
-
 .section-two-left-right-h-four{
     margin-top: 13px;
     font-size: 13px;
@@ -132,134 +89,42 @@ body{
     color: #99501b;
     background-color: #ffecd1;
 }
-
 .section-two-left-right-two{
     display: flex;
     margin-top: -5px;
 }
-
 .section-two-left-right-two-one, 
 .section-two-left-right-two-two {
     display: flex;
     margin-left: 8px;
 }
-
 .section-two-left-right-two-one{
     margin-left: 20px;
 }
-
 .section-two-left-right-two-two{
     margin-top: -15px;
     font-size: 10px;
     gap: 8px;
 }
-
-.section-two-left-right-two-two-h-one{
-    color: rgb(151, 149, 149);
-    margin-left: -3px;
-}
-
 .section-two-left-right-two-two-h-two{
     margin-left: 5px;
     color: rgb(151, 149, 149);
 }
-
 .section-two-left-right-two-two-h-three{
     margin-left: 5px;
     margin-top: 14px;
     font-size: 12px;
     color: rgb(151, 149, 149);
 }
-
-.section-two-right{
-    margin-right: -50px;
-}
-
-/* Image Slider */
-/* .container {
-    position: relative;
-
-}
-  
-.mySlides {
-    display: none;
-}
-
-.cursor {
-    cursor: pointer;
-}
-
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: rgb(0, 0, 0);
-    background-color: white;
-    font-weight: bold;
-    font-size: 20px;
-    border-radius: 0 3px 3px 0;
-    user-select:auto;
-    -webkit-user-select: none;
-}
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-/* .prev:hover,
-.next:hover {
-    background-color: rgba(255, 255, 255, 0.8);
-} */
-
-/* .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-.caption-container {
-    text-align: center;
-    background-color: #ffffff;
-    color: white;
-}
-  
-.row:after {
-    display: table;
-    clear: both;
-}
-
-.column {
-    float: left;
-    width: 16.66%;
-}
-
-.demo {
-    opacity: 0.6;
-}
-  
-.active,
-.demo:hover {
-    opacity: 1;
-} */
-
 .showSlide {
     display: none;
 }
-
 .showSlide:first-child {
     display: block;
 }
-
-    .showSlide img {
-        width: 100%;
-    }
+.showSlide img {
+    width: 100%;
+}
 .slidercontainer {
     max-width: 650px;
     position: relative;
@@ -283,10 +148,10 @@ body{
     right: 0;
     border-radius: 3px 0 0 3px;
 }
-    .left:hover, .right:hover {
-        background-color: rgba(255, 255, 255, 0.8);
-    }
-.content {
+.left:hover, .right:hover {
+    background-color: rgba(255, 255, 255, 0.8);
+}
+.slidercontainer .content {
     color: #eff5d4;
     font-size: 30px;
     padding: 8px 12px;
@@ -298,6 +163,7 @@ body{
 .active {
     background-color: #717171;
 }
+
 /* Fading animation */
 .fade {
     -webkit-animation-name: fade;
@@ -325,117 +191,107 @@ body{
 
 
 .tab {
-    width:450px;
+    width: 100%;
     overflow: hidden;
     display: flex;
-    justify-content: center;
-    border: 1px solid #ffffff;
     background-color: #f1f1f1;
-    margin-right: 60px;
-  }
+}
   
-  /* Style the buttons that are used to open the tab content */
-  .tab button {
-    background-color: inherit;
-    float: left;
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    width: calc(100% / 3);
+    background-color: #f7f7f7;
     border: 0.3px solid rgb(226, 226, 226);
     cursor: pointer;
-    padding-top: 16px;
-    padding-left: 42px;
-    padding-bottom: 16px;
-    padding-right: 40px;
+    padding: 16px 32px;
     transition: 0.3s;
     font-weight: 600;
     font-size: 18px;
-  }
-  
-  /* Change background color of buttons on hover */
-  .tab button:hover {
-    background-color: #f1f1f1;
-  }
-  
-  /* Create an active/current tablink class */
-  .tab button.active {
+}
+.tab button:hover {
+    background-color: #000000;
+    color: #fff;
+}
+.tab button.active {
     background-color: #000000;
     color: white;
-  }
-  
-  /* Style the tab content */
-  .tabcontent {
-    width: 71.3%;
+}
+.tabcontent {
     display: none;
     border: 1px solid #dedddd;
     border-top: none;
-  }
-
-  .tabcontent:first-child{
+}
+.tabcontent:first-child{
     display: block;
-  }
-
-  /* Create three columns of equal width */
+}
 .columns {
     width:100%;
-  }
-  
+}
 .columns:first-child{
     display: block;
 }
 
-  /* Style the list */
-  .price {
+/* Style the list */
+.columns .price {
+    width: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    -webkit-transition: 0.3s;
-    transition: 0.3s;
-  }
+}
   
-  /* Add shadows on hover */
-  .price:hover {
+/* Add shadows on hover */
+.columns .price:hover {
     box-shadow: 0 8px 12px 0 rgba(0,0,0,0.2)
-  }
-  
-  /* Pricing header */
-  .price .header {
+}
+
+/* Pricing header */
+.columns .price .header {
     background-color: #ffffff;
     color: rgb(0, 0, 0);
     font-size: 18px;
     font-weight: 600;
-  }
-  
-  /* List items */
-  .price li {
-    padding-top: 3px;
-    padding-left: 20px;
-    padding-bottom: 3px;
+}
+
+/* List items */
+.columns .price li {
     text-align: center;
-  }
-  
-  /* Grey list item */
-  .price .grey {
-    background-color: #000000;
-    font-size: 18px;
-    padding: 10px 25px;
-    margin-top: 15px;
-  }
-  
-  /* The "Sign Up" button */
-  .button {
-    background-color: #000000;
+}
+
+/* Grey list item */
+
+/* The "Sign Up" button */
+.button {
+    background-color: #1dbf73;
+    width: 100%;
     border: none;
     color: white;
     padding: 10px 25px;
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-  }
-  
-  .package-status li{
+}
+ul button{
+    padding: 16px;
+    margin-top: 16px;
+    width: 100%;
+    font-weight: 600;
+    font-size: 18px;
+    color: #fff;
+    background-color: #000000;
+    border: none;
+}
+ul button:hover{
+    background-color: #f7f7f7;
+    color: #404145;
+    border: none;
+    transition: ease-in-out 0.3s;
+}
+.package-status li{
     display: flex;
     flex-direction: row;
     font-size: 14px;
     gap: 50px;
-  }
+}
 
 /* Grey list item */
 .price .black {
@@ -444,8 +300,8 @@ body{
     padding: 10px 25px;
   }
   
-  /* The "Sign Up" button */
-  .button-black {
+/* The "Sign Up" button */
+.button-black {
     background-color: #f7f7f7;
     border: none;
     color: rgb(125, 123, 123);
@@ -453,18 +309,14 @@ body{
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-  }
+}
 
-  /* Change the width of the three columns to 100%
-  (to stack horizontally on small screens) */
-  @media only screen and (max-width: 600px) {
-    .columns {
-      width: 100%;
-    }
-  }
-
-.section-three{
-
+/* Change the width of the three columns to 100%
+(to stack horizontally on small screens) */
+@media only screen and (max-width: 600px) {
+.columns {
+    width: 100%;
+}
 }
 
 .section-three-left-one{
@@ -506,16 +358,13 @@ body{
     flex-direction: row;
 
 }
-
 .section-three-left-two-two-left img{
     width: 45px;
     border-radius: 50%;
 }
-
 .section-three-left-two-two-right{
 
 }
-
 .section-three-left-two-two-right-up{
     display: flex;
     flex-direction: row;
@@ -523,13 +372,11 @@ body{
     margin-top: -12px;
     padding-left: 15px;
 }
-
 .section-three-left-two-two-right-up-middle img{
     margin-left: 10px;
     width: 20px;
     margin-top: 13.5px;
 }
-
 .section-three-left-two-two-right-up-right{
     display: flex;
 }
@@ -539,42 +386,36 @@ body{
     margin-top: 14px;
     color: rgb(167, 166, 166);
 }
-
 .section-three-left-two-two-right-up-right svg{
     margin-left: 2px;
     color: rgb(113, 108, 108);
     margin-top: 13.5px;
     padding-left: 2px;
 }
-
 .section-three-left-two-two-right-down h2{
     font-size: 15px;
     margin-left: 15px;
     margin-top: -9px;
     color: #9c9c9d;
 }
-
 .section-four{
-    width: 720px;
-    margin-left: 120px;
+    margin: 16px 32px;
+    padding: 16px 32px;
+    width: 60%;
+    text-align: justify;
 }
-
 .heading-one{
     font-weight: 600;
 }
-
 .heading-two{
     color: gray;
 }
-
 .heading-three{
     font-weight: 600px;
 }
-
 .heading-four{
     color: gray;
 }
-
 .section-four li{
     color: gray;
     font-weight:500;
