--- a/public/assests/css/profile.styles.css
+++ b/public/assests/css/profile.styles.css
@@ -2,13 +2,12 @@ body{
     font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
     margin: 0;
     padding: 0;
-    color: #62646a;
-    background-color: #f7f7f7;
+    /*background-color: #f7f7f7;*/
 }
 .container{
     height: 100%;
     width: 100%;
-    padding: 50px 100px;
+    padding: 50px 100px 0px 100px;
 }
 .container .sub-container{
     margin: 0 auto;
