--- a/public/assests/css/sellerDashboard.styles.css
+++ b/public/assests/css/sellerDashboard.styles.css
@@ -6,10 +6,7 @@ body{
 
 /*sellerDashboard-content*/
 .sellerDashboard-content{
-    background-color: #f7f7f7;
-    border: 1px solid #c5c6c9;
-    padding-bottom: 32px;
-    height: 100%;
+    padding: 16px 32px 0px 32px;
 }
 /*header*/
 .sellerDashboard-content .personalizedHeader{
