--- a/public/assests/css/buyerHeader.styles.css
+++ b/public/assests/css/buyerHeader.styles.css
@@ -13,26 +13,19 @@ header {
 }
 
 header .upperHeader{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     height: 80px;
     width: 100%;
     padding: 32px;
-    align-items: center;
-    display: flex;
-    flex-grow: 1;
-}
-
-
-@media only screen and (max-width: 767px) {
-    header .upperHeader  {
-        height: 116px;
-        border-bottom: 2px solid #62646A;
-    }
 }
 
 /*logo*/
-
+.logo{
+    width: 10%;
+}
 .logo a {
-    padding-top: 14px;
     font-size: 24px;
     color: #1dbf73;
     text-decoration: none;
@@ -42,16 +35,13 @@ header .upperHeader{
 /*search bar*/
 
 .upperHeader .searchBar{
-    flex-basis: 200%;
-    margin-left: 20px;
-    margin-right: 20px;
+    width: 40%;
+    justify-content: space-between;
 }
-
 .upperHeader .searchBar form{
     display: flex;
     width: 100%;
 }
-
 .upperHeader .searchBar input[type=text] {
     display: block;
     text-align: left;
@@ -62,7 +52,6 @@ header .upperHeader{
     border-radius: 4px 0 0 4px;
     border-right: 0;
 }
-
 .upperHeader .searchBar button {
     display: block;
     text-align: left;
@@ -71,19 +60,17 @@ header .upperHeader{
     cursor: pointer;
     border: 1px solid #c5c6c9;
     border-radius: 0 4px 4px 0;
-    background-color: #1dbf73;
+    background-color: #000000;
+    color: #fff;
     transition: ease-in-out 0.3s;
 }
-
 .upperHeader .searchBar button:hover {
     color: #333;
     background: #fff;
 }
-
 .submenu {
     position: absolute;
 }
-
 .submenu ul{
     flex-direction: column;
     position: absolute;
@@ -100,17 +87,102 @@ header .upperHeader{
     box-shadow: 0px 0px 100px rgba(20, 18, 18, 0.25);
     display: none;
 }
-
 .submenu ul li {
     list-style-type: none;
     position: relative;
     padding: 0.625rem 0 0.5rem;
 }
 
-@media screen and (max-width: 767px) {
+/*navbar and navigation links*/
 
+.upperHeader .navbar{
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+    width: 32%;
+}
+.upperHeader nav{
+    width: 100%;
+}
+.nav-links {
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    border: 3px solid black;
+
+}
+.navbar .nav-links li {
+    width: calc(100% / 6);
+    border: 1px solid black;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: end;
+}
+.nav-links a {
+    color: #62646A;
+    text-decoration: none;
+}
+.wordLink a:hover {
+    text-decoration: underline;
+    border-bottom: 4px solid #1dbf73;
+    padding-bottom: 2px;
+    text-decoration: none;
+}
+.upperHeader svg {
+    width: 24px;
+    height: 24px;
+    box-sizing: border-box;
+    font-size: 14px;
+    color: #62646A;
+    align-items: center;
+}
+.upperHeader .svgLink{
+
+}
+.upperHeader .svgLink:hover{
+    overflow: hidden;
+    width: 28px;
+    height: 28px;
+    box-sizing: border-box;
+    color: #62646A;
+    background-color: #dadbdd;
+    border-radius: 100%;
+    object-fit: cover;
+}
+.upperHeader .notificationSign{
+    width: 8px;
+    height: 8px;
+    border-radius: 100%;
+    position: absolute;
+    background-color: crimson;
+}
+/*header categories*/
+.headerCategories{
+    width: 100%;
+}
+.headerCategories nav .nav-links {
+    display: flex;
+    justify-content: space-between;
+    border-top: 2px solid #62646A;
+    border-bottom: 2px solid #62646A;
+    padding: 10px 32px 10px 32px;
+}
+
+
+/*media queries 600px
+@media screen and (max-width: 600px) {
+
+    .navbar  {
+        display: none;
+    }
     .upperHeader .navbar{
         display: none;
+    }
+
+    header .upperHeader  {
+        height: 116px;
+        border-bottom: 2px solid #62646A;
     }
 
     .upperHeader{
@@ -119,7 +191,7 @@ header .upperHeader{
     }
 
     .upperHeader .searchBar{
-      width: 100%;
+      width: 60%;
     }
 
     .upperHeader .searchBar form{
@@ -142,61 +214,30 @@ header .upperHeader{
     .upperHeader .searchBar input[type=text] {
         border: 1px solid #c5c6c9;
     }
-}
 
-@media only screen and (max-width: 1500px) {
-    .navbar .wordLink  {
-        display: none;
+    .headerCategories nav .nav-links {
+        width: calc(100% - 40px);
+    }    
+
+    .headerCategories  {
+        overflow: scroll;
     }
 }
 
-/*navbar and navigation links*/
+/*media queries 900px
+@media only screen and (max-width: 900px) {
+    .upperHeader .searchBar{
+        width: 60%;
+        justify-content: space-between;
+        margin-left: 32px;
+    }
 
-.navbar{
-    width: 100%;
-}
-
-.nav-links {
-    list-style: none;
-    display: flex;
-}
-
-.nav-links li {
-    margin-right: 20px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.nav-links a {
-    color: #62646A;
-    text-decoration: none;
-}
-
-.wordLink a:hover {
-    text-decoration: underline;
-    border-bottom: 4px solid #1dbf73;
-    padding-bottom: 2px;
-    text-decoration: none;
-}
-
-.upperHeader svg {
-    width: 24px;
-    height: 24px;
-    font-size: 14px;
-    color: #62646A;
-    margin-right: 10px;
-    align-items: center;
-}
-
-@media only screen and (max-width: 1500px) {
     .upperHeader .searchBar{
         flex-basis: 500%;
         margin-left: 20px;
         margin-right: 20px;
     }
-    
-
-      .upperHeader .searchBar a, .upperHeader .searchBar input[type=text]{
+    .upperHeader .searchBar a, .upperHeader .searchBar input[type=text]{
         display: block;
         text-align: left;
         width: 100%;
@@ -206,37 +247,13 @@ header .upperHeader{
     .upperHeader .searchBar input[type=text] {
         border: 1px solid #c5c6c9;
     }
-}
 
+    .headerCategories nav .nav-links {
+        width: calc(100% - 40px);
+    }    
 
-@media only screen and (max-width: 767px) {
-    .navbar  {
-        display: none;
-    }
-}
-
-/*header categories*/
-.headerCategories nav .nav-links {
-    display: flex;
-    justify-content: space-between;
-    border-top: 2px solid #62646A;
-    border-bottom: 2px solid #62646A;
-    padding: 10px 32px 10px 32px;
-}
-
-@media only screen and (max-width: 600px) {
     .headerCategories  {
-        overflow: scroll;
-        overflow-y: hidden;
-    }
-}
-
-@media only screen and (max-width: 1400px) {
-    .headerCategories  {
-        width: auto;
         overflow-x: scroll;
-        overflow-y: hidden;
     }
 }
-
-
+*/
