--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -13,6 +13,7 @@ body{
 
 /*profile-container*/
 .profile-container{
+
     background-color: #fff;
     margin: 32px;
     box-sizing: border-box;
@@ -28,4 +29,67 @@ body{
     object-fit: cover;
     width: 100px;
     height: 100px;
+}
+
+.other-category-container{
+    background-color: #fff;
+    margin: 32px;
+    box-sizing: border-box;
+    border: 1px solid #c5c6c9;
+    border-radius: 15px;
+    box-sizing: border-box;
+    padding: 16px;
+}
+.other-category-header{
+    display: flex;
+    justify-content: space-between;
+    border-radius: 100%;
+    object-fit: cover;
+    width: auto;
+    height: auto;
+}
+
+.icons{
+    width: 10px;
+    height: 10px;
+}
+
+.seller{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+}
+
+.seller-functions{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#button{
+    /* display: flex; */
+    justify-content:end;
+    align-items: end;
+    background-color:#32bd6e;
+    color: white;
+    border: 0;
+    border-radius: 15px;
+    padding: 7px;
+    margin: 5px;
+}
+
+#button:hover{
+    cursor: pointer;
+
+}
+
+.img{
+    /* display: flex;
+    justify-content: flex-start; */
+}
+
+.Topics{
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px;
 }
