--- a/public/assests/css/home.styles.css
+++ b/public/assests/css/home.styles.css
@@ -99,7 +99,7 @@ body{
     display: flex;
     background-color: #0b3a23;
     width: 100%;
-    height: 648px;
+    height: 100vh;
     margin-bottom: 64px;
     box-sizing: border-box;
 }
